add the logout handler button

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,20 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/firebase/10.2.0/firebase-app.js"
+      integrity="sha512-pItzvCi+5idtIEEHr98X40Wc+UCPAXs6lv9B1fZF2PSoF6wTWzhB/TO8uZf4duoLtsK3DuN1syFmyjwdD2gKjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth-compat.js"></script>
+    
     <title>Expense App</title>
   </head>
   <body>
     <div id="root"></div>
-  
   </body>
 </html>
